# 3D_Object_Loader

./: README.md
src/: CMakeLists.txt  control.cpp  control.h  loader.cpp  loader.h  main.cpp  object.cpp  object.h  viewer.cpp  viewer.h
src/common/: README.md  shader.hpp
src/shaders/: material_fragment_shader.fragmentshader  material_vertex_shader.vertexshader  simple_fragment_shader.fragmentshader  simple_vertex_shader.vertexshader  texture_fragment_shader.fragmentshader  texture_vertex_shader.vertexshader
